--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ s0.parentNode.insertBefore(s1,s0);
 	    <h3 id="m1">MODULE 1: TB M&amp;E: An Overview</h3>
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>Topics Covered</strong>:  WHO and USAID global TB strategies and targets, the basics of TB M&amp;E, including concepts such as M&amp;E systems, M&amp;E frameworks and illustrative TB indicator mapping to help contextualize the PBMEF. <strong> <br>
-	    </strong><a href="Tuberculosis-Case-Definitions.pdf" target="_blank"></a></p><a class="button" href="M1/index.html">View Module 1</a>
+	    </strong><a href="Tuberculosis-Case-Definitions.pdf" target="_blank"></a></p>
+	    <a class="button" href="M1/index.html">REView Module 1</a>
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
@@ -136,7 +137,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <p><strong>🕓</strong><strong> Time to Complete: </strong>15 minutes</p>
 	  <p>Pass the final exam and complete the course evaluation to receive a certificate of completion.<br>
 	    </p>
-	<a class="button" target="_blank" href="https://tally.so/r/wAxLXk">Final Exam</a>&nbsp; <a class="button" href="course-evaluation.html">Course Evaluation</a>  
+	<a class="button" href="https://360.articulate.com/review/content/ed92701e-2c1f-49ba-9767-ee3fa8a8e667/review">Final Exam</a>&nbsp; <a class="button" href="course-evaluation.html">Course Evaluation</a>  
       </div>
 		</div></div> 
 </div></div>
