--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta property="og:title" content="Tuberculosis Monitoring, Evaluation and Surveillance" />
-<meta property="og:image" content="to add "/>
-<meta name="description" content="to add" />
+<meta property="og:image" content="https://tbdiah.github.io/learning/images/homepage-phone.png"/>
+<meta name="description" content="The Tuberculosis Monitoring and Evaluation online course provides a comprehensive understanding of USAID's Performance-based Monitoring and Evaluation Framework (PBMEF) and its practical application. As a companion to the PBMEF Guide, the course offers an overview of key TB M&E concepts and includes scenarios that focus on cascade analysis and root cause analysis using PBMEF indicators, as well as strategies for presenting TB data to help stakeholders take informed action" />
 <meta name="keywords" content="TB, tuberculosis, TB DIAH, USAID, PBMEF, TB M&E, monitoring and evaluation of TB programs" />
 <meta http-equiv="content-language" content="en">
 <title>Online Learning: TB Monitoring, Evaluation and Surveillance</title>
@@ -81,7 +81,7 @@
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>Topics Covered</strong>:  WHO and USAID global TB strategies and targets, the basics of TB M&amp;E, including concepts such as M&amp;E systems, M&amp;E frameworks and illustrative TB indicator mapping to help contextualize the PBMEF. <strong> <br>
 	    </strong><a href="Tuberculosis-Case-Definitions.pdf" target="_blank"></a></p>
-	    <a class="button" href="M1/index.html">REView Module 1</a>
+	    <a class="button" href="M1/index.html">View Module 1</a>
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
