--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    <h3 id="m0">START HERE: Self-Assessment &amp; Pre-Readings</h3>
 	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 5-10 minutes</p>
 	    <p>Please take this short self-assessment to check your readiness  for the course. You will receive a readiness score and then you can set your<strong> learning goals.</strong> After you finish, check out the <a href="resources.html">TB M&amp;E Resources</a> organized by topic area to prepare you for the course.</p>
-		  <a class="button" href="self-assessment.html">TAKE ASSESSMENT</a><a class="button" href="resources.html">TB M&amp;E Resources</a>
+		  <a href="https://tally.so/r/mJq8EK" target="_blank" class="button">TAKE ASSESSMENT</a><a class="button" href="resources.html">TB M&amp;E Resources</a>
 	  </div></div>
 	</div><hr>
 
@@ -69,7 +69,7 @@
 	    <h3 id="m1">MINI-MODULE: Basics of TB: Epidemiology &amp; Case Definitions (optional)</h3>
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>New to TB?</strong> This mini-module provides the basic facts about the TB epidemic, the epidemiology of TB as it relates to monitoring, evaluation and surveillance and the latest TB case classifications and definitions from the <a href="https://www.who.int/health-topics/tuberculosis#tab=tab_1" target="_blank">World Health Organization (WHO)</a>.</p>
-	    <a class="button" href="M1-mini-module/index.html#/">View MINI-Module</a>
+	    <a href="M1-mini-module/index.html#/" target="_blank" class="button">View MINI-Module</a>
 	  </div></div>
 	</div> 
 	  <div class="section group">
@@ -81,7 +81,7 @@
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>Topics Covered</strong>:  WHO and USAID global TB strategies and targets, the basics of TB M&amp;E, including concepts such as M&amp;E systems, M&amp;E frameworks and illustrative TB indicator mapping to help contextualize the PBMEF. <strong> <br>
 	    </strong><a href="Tuberculosis-Case-Definitions.pdf" target="_blank"></a></p>
-	    <a class="button" href="M1/index.html">View Module 1</a>
+	    <a href="M1/index.html" target="_blank" class="button">View Module 1</a>
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
@@ -92,7 +92,7 @@
         <br>
         <strong>Topics Covered</strong>:
 		Components of USAID's Performance-Based M&amp;E framework, the essential indicator list, a deep dive into USAID's 10 Core indicators, and constructing indicator cascades.</p>
-		  <a class="button" href="M2/index.html">View Module 2</a></div>
+		  <a href="M2/index.html" target="_blank" class="button">View Module 2</a></div>
 	</div>
 	</div> 
 	 	 	 <div class="section group"><hr>
@@ -103,7 +103,7 @@
 	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
         <strong>Topics Covered:</strong> The dimensions of data quality, data analysis, cascade analysis, and root cause analysis.</p>
-	   <a class="button" href="M3-P1/index.html">VIEW 3.1 TB Data ANalysis</a><a class="button" href="M3-P2/index.html">VIEW 3.2 TB Data Quality</a> </div></div>
+	   <a href="M3-P1/index.html" target="_blank" class="button">VIEW 3.1 TB Data ANalysis</a><a href="M3-P2/index.html" target="_blank" class="button">VIEW 3.2 TB Data Quality</a> </div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod4.png" width="1024" height="632" alt="Photo of a woman in a white hijab and patterned dress speaks at a podium with a microphone, presenting at an TB regional conference hosted by USAID."/></div></div>
@@ -113,7 +113,7 @@
 	  <p><strong>🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	  <br>
 	    <strong>Topics Covered:</strong> Data demand and use, barriers to data use, data visualizations, stakeholder buy-in, and disseminating M&amp;E results.</p>
-		  		  <a class="button" href="M4/index.html">View Module 4</a>
+		  		  <a href="M4/index.html" target="_blank" class="button">View Module 4</a>
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
@@ -124,7 +124,7 @@
 	  <p><strong>🕓</strong><strong> Time to Complete: </strong>15 minutes</p>
 	  <p>Pass the final exam and complete the course evaluation to receive a certificate of completion.<br>
 	    </p>
-	<a class="button" href="Final-Exam/index.html">Final Exam</a>&nbsp; <a class="button" href="https://tally.so/r/3yDLy0">Course Evaluation</a>  
+	<a href="Final-Exam/index.html" target="_blank" class="button">Final Exam</a>&nbsp; <a class="button" href="https://tally.so/r/3yDLy0">Course Evaluation</a>  
       </div>
 		</div></div> 
 </div></div>
